--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tetness</title>
+    <title>Devris</title>
     <link rel="stylesheet" type="text/css" href="./style.css">
     <script src="./input.js"></script>
     <script src="./keyview.js"></script>
@@ -15,5 +15,20 @@
     <canvas id="board" width="420" height="820"></canvas>
     <canvas id="block" width="420" height="820"></canvas>
     <canvas id="keyview" width="430" height="190"></canvas>
+    <div id="paragraph">
+        <h2>how to play</h2>
+        <ul>
+            <li>move: left arrow, right arrow</li>
+            <li>rotate: z(counterclockwise), x(clockwise), a(half turn)</li>
+            <li>hard drop: space</li>
+            <li>soft drop: down arrow</li>
+        </ul>
+        <h3>Todo:</h3>
+        <ul>
+            <li>Implement wallkick</li>
+            <li>Implement next</li>
+            <li>Implement hold</li>
+        </ul>
+    </div>
 </body>
 </html>
