show next blocks

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <script src="./input.js"></script>
     <script src="./keyview.js"></script>
     <script src="./board.js"></script>
-    <script src="./tetrimino.js"></script>
+    <script src="./tetromino.js"></script>
     <script src="./game.js"></script>
 </head>
 <body>
     <canvas id="board" width="420" height="820"></canvas>
     <canvas id="block" width="420" height="820"></canvas>
     <canvas id="keyview" width="430" height="190"></canvas>
+    <canvas id="next" width="180" height="820"></canvas>
     <div id="paragraph">
         <h2>how to play</h2>
         <ul>
@@ -26,8 +27,8 @@
         <h3>Todo:</h3>
         <ul>
             <li>Implement wallkick</li>
-            <li>Implement next</li>
             <li>Implement hold</li>
+            <li>colorize block</li>
         </ul>
     </div>
 </body>
