--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="./board.js"></script>
     <script src="./tetromino.js"></script>
     <script src="./game.js"></script>
+    <script src="./kicktable.js"></script>
 </head>
 <body>
     <canvas id="board" width="420" height="820"></canvas>
@@ -26,7 +27,6 @@
         </ul>
         <h3>Todo:</h3>
         <ul>
-            <li>Implement wallkick</li>
             <li>Implement hold</li>
             <li>colorize block</li>
         </ul>
