--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <title>Devris</title>
     <link rel="stylesheet" type="text/css" href="./style.css">
     <script src="./input.js"></script>
@@ -13,10 +14,11 @@
     <script src="./kicktable.js"></script>
 </head>
 <body>
-    <canvas id="board" width="420" height="820"></canvas>
-    <canvas id="block" width="420" height="820"></canvas>
+    <canvas id="hold" width="100" height="100"></canvas>
+    <canvas id="board" width="320" height="620"></canvas>
+    <canvas id="block" width="320" height="620"></canvas>
+    <canvas id="next" width="100" height="400"></canvas>
     <canvas id="keyview" width="430" height="190"></canvas>
-    <canvas id="next" width="180" height="820"></canvas>
     <div id="paragraph">
         <h2>how to play</h2>
         <ul>
