--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
     <script src="./tetromino.js"></script>
     <script src="./game.js"></script>
     <script src="./kicktable.js"></script>
+    <script src="./color.js"></script>
 </head>
 <body>
     <canvas id="hold" width="100" height="100"></canvas>
     <canvas id="board" width="320" height="620"></canvas>
+    <canvas id="ghost" width="320" height="620"></canvas>
     <canvas id="block" width="320" height="620"></canvas>
     <canvas id="next" width="100" height="400"></canvas>
     <canvas id="keyview" width="430" height="190"></canvas>
