--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
         </ul>
         <h3>Todo:</h3>
         <ul>
-            <li>Implement hold</li>
-            <li>colorize block</li>
+            <li>improve design</li>
         </ul>
     </div>
 </body>
