--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <li>rotate: z(counterclockwise), x(clockwise), a(half turn)</li>
             <li>hard drop: space</li>
             <li>soft drop: down arrow</li>
+            <li>hold: c</li>
         </ul>
         <h3>Todo:</h3>
         <ul>
